<resources>
    <string name="app_name">WeatherApp!</string>
    <string name="cityname">CityName</string>
    <string name="todo1">TODO</string>
    <string name="choose_your_city">Choose your city</string>
    <string name="todo">TODO</string>
    <string name="choose">CHOOSE</string>
    <string name="moscow">Moscow</string>
    <string name="button">Button</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change_city">change city</string>
    <string name="editTextDate">дата</string>
    <string name="температура">27</string>
    <string name="время">время</string>
    <string name="дата">дата</string>
    <string name="завтра">завтра</string>
    <string name="послезавтра">послезавтра</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>