<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainfragmet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment" />

<ImageView
android:id="@+id/imageView"
android:layout_width="423dp"
android:layout_height="737dp"
android:contentDescription="@string/todo1"
android:scaleType="centerCrop"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.619"
app:srcCompat="@drawable/main_background2" />

<TextView
android:id="@+id/textView"
android:layout_width="149dp"
android:layout_height="46dp"
android:layout_marginStart="128dp"
android:layout_marginTop="112dp"
android:textSize="24sp"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<Button
android:id="@+id/button2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="149dp"
android:layout_marginTop="641dp"
android:layout_marginEnd="149dp"
android:layout_marginBottom="42dp"
android:onClick="onClick"
android:text="@string/change_city"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="1.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.796" />

<EditText
android:id="@+id/editTextTime"
android:layout_width="172dp"
android:layout_height="42dp"
android:layout_marginStart="211dp"
android:layout_marginTop="51dp"
android:layout_marginEnd="28dp"
android:layout_marginBottom="638dp"
android:ems="10"
android:importantForAutofill="no"
android:inputType="time"
android:text="@string/время"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.023" />

<EditText
android:id="@+id/editTextDate"
android:layout_width="167dp"
android:layout_height="45dp"
android:layout_marginStart="29dp"
android:layout_marginTop="48dp"
android:layout_marginEnd="215dp"
android:layout_marginBottom="638dp"
android:autofillHints=""
android:ems="10"
android:inputType="date"
android:text="@string/дата"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.0" />

<TextView
android:id="@+id/textView2"
android:layout_width="55dp"
android:layout_height="58dp"
android:layout_marginStart="151dp"
android:layout_marginTop="240dp"
android:layout_marginEnd="205dp"
android:layout_marginBottom="433dp"
android:text="@string/температура"
android:textSize="36sp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/textView3"
android:layout_width="180dp"
android:layout_height="41dp"
android:layout_marginStart="22dp"
android:layout_marginTop="356dp"
android:layout_marginEnd="178dp"
android:layout_marginBottom="301dp"
android:text="@string/завтра"
android:textSize="24sp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.718" />

<TextView
android:id="@+id/textView4"
android:layout_width="199dp"
android:layout_height="35dp"
android:layout_marginStart="22dp"
android:layout_marginTop="489dp"
android:layout_marginEnd="171dp"
android:layout_marginBottom="176dp"
android:text="@string/послезавтра"
android:textSize="24sp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="1.0" />

</FrameLayout>